--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@architect/functions": "^5.2.4-RC.0"
   },
   "devDependencies": {
-    "@architect/sandbox": "^5.3.6-RC.0"
+    "@architect/sandbox": "^5.3.6-RC.0",
+    "@begin/data": "^4.0.2-RC.0"
   }
 }
